[gd_scene load_steps=2 format=3 uid="uid://dwkluwlcs34g2"]

[ext_resource type="Script" path="res://scripts/quiz.gd" id="1_27bjs"]

[node name="Quiz" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27bjs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 472.0
offset_bottom = 233.0

[node name="LbQuestion" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="BtCheck" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="LbFeedback" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/BtCheck" to="." method="_on_btCheck_pressed"]
